--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 
 header {
-    background-image: url("../image/header.jpg");
+    background-image: url("../images/header.jpg");
     background-size: cover;
     background-position: center center;
     /* text-align: center; */
@@ -36,4 +36,91 @@ header .heading-page p{
     color: #acacac;
     width: 40%;
     margin: auto;
+}
+
+
+header .count-down{
+    width: 60%;
+    margin: 90px auto ;
+}
+
+header .counter {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+header .count-amount {
+    font-size: 60px;
+    display: block;
+    font-weight: bold;
+    color: #ffce00;
+}
+
+header .count-period {
+    font-size: 30px;
+    display: block;
+    font-weight: bold;
+    color: #fff;
+}
+
+header .send-notification {
+    font-size: 18px;
+    color: #fff;
+
+}
+
+header .input-group{
+    width: 30%;
+    margin: auto;
+    transform: translateY(30%);
+}
+
+header .send-notification .input-group button{
+    background-color: #ffce00;
+    padding: 13px 33px ;
+    border-radius: 0%;
+}
+
+header .send-notification .input-group input{
+    border-radius: 0%;
+    border: 2px solid #e6e6e6;
+    color: #e6e6e6;
+    font-size: 18px;
+    text-align: right;
+}
+
+.invalid-feedback{
+    margin-bottom: -30px;
+}
+
+section.features{
+    padding: 100px 0;
+}
+
+section.features h2{
+    font-size: 45px;
+    color: #555;
+    margin-bottom: 50px;
+}
+
+section.features .row .d-flex{
+    border: 4px solid #fafafa;
+    padding: 40px 10px;
+    margin-bottom: 20px;
+    max-height: 190px;
+}
+
+section.features .row .d-flex h4{
+    font-size: 24px;
+    color: #555;
+}
+
+section.features .row .d-flex p{
+    font-size: 15px;
+    line-height: 25px;
+    color: #a1a1a1;
+}
+
+section.features .row .col-md-6:nth-child(even){
+direction: ltr;
 }
